deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-service
spec:
  selector:
    matchLabels:
      app: virtualan-mock
      env: dev
  replicas: 3
  template:
    metadata:
      labels:
        app: virtualan-mock
        env: dev
    spec:
      containers:
      - name: virtualan
        image: "gcr.io/virtualan-demo/virtualan-mock:1.0"
---
apiVersion: v1
kind: Service
metadata:
  name: mock-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: virtualan-mock
    env: dev
