servicedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mock-service
spec:
  selector:
    matchLabels:
      app: virtualan-mock
      env: dev
  replicas: 3
  template:
    metadata:
      labels:
        app: virtualan-mock
        env: dev
    spec:
      containers:
      - name: virtualan
        image: "docker.io/virtualan/service-virtualization:2.0"
        securityContext:
          runAsUser: 2000
          allowPrivilegeEscalation: false
        resources:
          limits:
            memory: "1.5Gi"
            cpu: "0.2"
          requests:
            memory: "800Mi"
            cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: mock-svc
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: virtualan-mock
    env: dev
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: virtualan-ingress
spec:
  rules:
  - http:
      paths:
      - path: /mock
        backend:
          serviceName: mock-svc
          servicePort: 80
